# pymotion

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements_numpy.txt  requirements_pytorch.txt  requirements_testing.txt
.github/workflows/: publish-to-pypi.yml
blender/: pymotion_blender.py
pymotion/io/: bvh.py
pymotion/ops/: center_of_mass.py  center_of_mass_torch.py  forward_kinematics.py  forward_kinematics_torch.py  skeleton.py  skeleton_torch.py  time.py  time_torch.py  vector.py  vector_torch.py
pymotion/ops/tests/: __init__.py  test_center_of_mass.py  test_forward_kinematics.py  test_skeleton.py  test_time.py  test_vector.py
pymotion/render/: __init__.py  blender.py  viewer.py
pymotion/render/internal/: pymotion_blender.py
pymotion/rotations/: dual_quat.py  dual_quat_torch.py  ortho6d.py  ortho6d_torch.py  quat.py  quat_torch.py
pymotion/rotations/tests/: __init__.py  test_dual_quat.py  test_ortho6d.py  test_quat.py
pymotion/visualizer/: blender.py  plot.py
