# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["pymotion/*"]
exclude = ["*test*"]

[project]
name = "upc-pymotion"
version = "0.0.3"
description = "A Python library for working with motion data in NumPy or PyTorch."
readme = "README.md"
authors = [{ name = "Jose Luis Ponton", email = "jose.luis.ponton@upc.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["quaternion", "dual quaternion", "rotation matrix", "motion", "blender", "pytorch", "numpy", "forward kinematics", "skeleton"]
dependencies = [
    "numpy>=1.20.0",
]
requires-python = ">=3.0"

[project.optional-dependencies]
pytorch = ["torch", "torchvision", "torchaudio"]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/UPC-ViRVIG/pymotion"